[package]
name = "joes-gdmc-http-rs"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
byteorder = "1.4"
enum_pack = { version = "0.1", path = "../enum_pack" }
parking_lot = "0.12.1"
flate2 = "1.0"
num-traits = "0.2"
